# AITactics

./: .gitignore  .gitmodules  CMakeLists.txt
Code/: CMakeLists.txt
Code/AITacticsEngine/: AITacticsEngine_PCH.h  CMakeLists.txt
Code/AITacticsEngine/Implementation/AI/Action/: AIAction.cpp  AIAction.h
Code/AITacticsEngine/Implementation/AI/Agent/: AIAgent.cpp  AIAgent.h
Code/AITacticsEngine/Implementation/Common/DataContainer/: Data.h  DataContainer.cpp  DataContainer.h
Code/AITacticsEngine/Interface/AI/Action/: IAIAction.h  IAIActionHandler.h
Code/AITacticsEngine/Interface/AI/Agent/: AIAgentId.h  IAIAgent.h  IAIAgentDataEventHandler.h  IAIAgentDataHandler.h  IAIAgentManager.h
Code/AITacticsEngine/Interface/AI/Brain/: AIBrainId.h  IAIAgentBrain.h  IAIBrain.h  IAIBrainManager.h
Code/AITacticsEngine/Interface/AI/Engine/: AIEngineParams.h
Code/AITacticsEngine/Interface/Common/: ObjectHandle.h  StringId.cpp  StringId.h
Code/AITacticsEngine/Interface/Common/DataContainer/: IDataContainer.h  IDataHandler.h
Code/AITacticsEngine/Interface/Common/EventHandler/: IEventHandlerContext.h
Code/AITacticsEngine/Interface/Common/ObjectFactory/: IObjectFactory.h  IObjectsManager.h
Code/AITacticsEngine/Interface/di/: IDependencyInjector.h
Code/AITacticsEngine_Test/: CMakeLists.txt
Code/AITacticsEngine_Test/FakeObjects/Common/: IDataFake_RuntimeDataType.cpp
Code/AITacticsEngine_Test/MockObjects/AI/Action/: IAIActionHandler_Mock.h  IAIAction_Mock.h
Code/AITacticsEngine_Test/MockObjects/AI/Agent/: IAIAgentDataHandler_Mock.h
Code/AITacticsEngine_Test/MockObjects/Common/: IDataContainer_Mock.h  IData_Mock.h
Code/AITacticsEngine_Test/Tests/AI/: AIAgent_Test.cpp  IAIAgent_Test.h
Code/AITacticsEngine_Test/Tests/Common/: DataContainer_Test.cpp  Data_Test.cpp  IDataContainer_Test.h  ObjectHandle_Test.cpp
Code/AITacticsExample/: CMakeLists.txt
Code/Engine/: CMakeLists.txt
Code/Engine/AITacticsEngine/: AITacticsEngine_PCH.cpp
Code/Engine/AITacticsEngine/Implementation/Common/DataContainer/: Data.h  DataContainer.cpp
Code/Engine/AITacticsEngine/Interface/AI/: IAIAction.h  IAIExecuteActionEventHandler.h
Code/Engine/AITacticsEngine/Interface/AI/Action/: IAIAction.h  IAIExecuteActionEventHandler.h
Code/Engine/AITacticsEngine/Interface/AI/Agent/: IAIAgent.h  IAIAgentDataEventHandler.h  IAIAgentManager.h
Code/Engine/AITacticsEngine/Interface/AI/Brain/: IAIAgentBrain.h  IAIBrain.h  IAIBrainManager.h
Code/Engine/AITacticsEngine/Interface/AI/Engine/: IAIEngine.h
Code/Engine/AITacticsEngine/Interface/Common/: ObjectHandle.h  StringId.cpp
Code/Engine/AITacticsEngine/Interface/Common/DataContainer/: IData.h  IDataContainer.h  IDataHandler.h
Code/Engine/AITacticsEngine/Interface/Common/EventHandler/: IEventHandler.h  IEventHandlerContext.h
Code/Engine/AITacticsEngine/Interface/Common/ObjectFactory/: IObjectCreator.h  IObjectFactory.h  IObjectsManager.h
Code/Engine/Source/Interface/AI/: IAIAgent.h
Code/Example/: CMakeLists.txt
Code/Example/AITacticsExample/: main.cpp
Code/Test_AITacticsEngine/: CMakeLists.txt
Code/Test_AITacticsEngine/FakeObjects/Common/: IDataFake_RuntimeDataType.cpp  IDataFake_RuntimeDataType.h
Code/Test_AITacticsEngine/Tests/Common/: DataContainer_Test.cpp  Data_Test.cpp  IDataContainer_Test.h  StringId_Test.cpp
Code/Test_Engine/: CMakeLists.txt
Code/Test_Engine/Tests/Common/: ObjectHandle_Test.cpp  StringId_Test.cpp
Source/Interface/AI/: IAIAction.h  IAIBrain.h
